[#12] feat: 작업(Task) 관련 API에 프로젝트 멤버 권한 검증 도입
