# src/main/resources/static/swagger-ui/openapi3.yaml
@@ -41,7 +41,7 @@ paths:
               examples:
                 로그인 성공:
                   value: "{\"status\":\"SUCCESS\",\"body\":{\"userId\":1,\"email\"\
-                    :\"test@naver.com\",\"name\":\"test\"},\"timestamp\":\"2026-06-04T18:51:43.6893453\"\
+                    :\"test@naver.com\",\"name\":\"test\"},\"timestamp\":\"2026-06-04T19:27:17.327268\"\
                     }"
   /api/logout:
     post:
@@ -59,7 +59,7 @@ paths:
                 $ref: "#/components/schemas/api-logout229656191"
               examples:
                 로그아웃 성공:
-                  value: "{\"status\":\"SUCCESS\",\"body\":null,\"timestamp\":\"2026-06-04T18:51:43.9516012\"\
+                  value: "{\"status\":\"SUCCESS\",\"body\":null,\"timestamp\":\"2026-06-04T19:27:17.6107756\"\
                     }"
   /api/project:
     post:
@@ -88,7 +88,7 @@ paths:
               examples:
                 프로젝트 생성 성공:
                   value: "{\"status\":\"SUCCESS\",\"body\":{\"projectId\":1},\"timestamp\"\
-                    :\"2026-06-04T18:51:45.3734756\"}"
+                    :\"2026-06-04T19:27:19.4296082\"}"
   /api/projects:
     get:
       tags:
@@ -142,7 +142,7 @@ paths:
                     OWNER\",\"totalTaskCount\":10,\"completedTaskCount\":6,\"inProgressTaskCount\"\
                     :4,\"progressRate\":0.6}],\"pageInfo\":{\"currentPage\":1,\"pageSize\"\
                     :10,\"totalElements\":1,\"totalPages\":1,\"isFirst\":true,\"isLast\"\
-                    :true}},\"timestamp\":\"2026-06-04T18:51:45.324874\"}"
+                    :true}},\"timestamp\":\"2026-06-04T19:27:19.3638433\"}"
   /api/reissue:
     post:
       tags:
@@ -168,7 +168,7 @@ paths:
                 $ref: "#/components/schemas/api-logout229656191"
               examples:
                 토큰 재발급 성공:
-                  value: "{\"status\":\"SUCCESS\",\"body\":null,\"timestamp\":\"2026-06-04T18:51:42.703963\"\
+                  value: "{\"status\":\"SUCCESS\",\"body\":null,\"timestamp\":\"2026-06-04T19:27:16.1769691\"\
                     }"
         "401":
           description: "401"
@@ -179,7 +179,7 @@ paths:
               examples:
                 토큰 재발급 실패 - 리프레시 토큰이 만료 되었을 경우:
                   value: "{\"status\":\"ERROR\",\"body\":{\"status\":\"UNAUTHORIZED\"\
-                    ,\"message\":\"Refresh Token이 만료되었습니다.\"},\"timestamp\":\"2026-06-04T18:51:43.3826443\"\
+                    ,\"message\":\"Refresh Token이 만료되었습니다.\"},\"timestamp\":\"2026-06-04T19:27:17.001326\"\
                     }"
   /api/signup:
     post:
@@ -212,7 +212,7 @@ paths:
               examples:
                 user/signup:
                   value: "{\"status\":\"SUCCESS\",\"body\":{\"userId\":1},\"timestamp\"\
-                    :\"2026-06-04T18:53:04.6454041\"}"
+                    :\"2026-06-04T19:28:36.8419935\"}"
   /api/tag:
     post:
       tags:
@@ -238,7 +238,7 @@ paths:
               examples:
                 태그 생성 성공:
                   value: "{\"status\":\"SUCCESS\",\"body\":{\"tagId\":1},\"timestamp\"\
-                    :\"2026-06-04T18:52:26.7554741\"}"
+                    :\"2026-06-04T19:28:01.9269216\"}"
   /api/tags:
     get:
       tags:
@@ -256,7 +256,7 @@ paths:
               examples:
                 태그 목록 조회 성공:
                   value: "{\"status\":\"SUCCESS\",\"body\":{\"tags\":[{\"tagId\":1,\"\
-                    name\":\"백엔드\",\"color\":\"blue\"}]},\"timestamp\":\"2026-06-04T18:52:26.6904571\"\
+                    name\":\"백엔드\",\"color\":\"blue\"}]},\"timestamp\":\"2026-06-04T19:28:01.8343051\"\
                     }"
   /api/task:
     post:
@@ -286,7 +286,7 @@ paths:
               examples:
                 작업 생성 성공:
                   value: "{\"status\":\"SUCCESS\",\"body\":{\"taskId\":1},\"timestamp\"\
-                    :\"2026-06-04T18:52:27.5049867\"}"
+                    :\"2026-06-04T19:28:02.9491788\"}"
   /api/tasks:
     get:
       tags:
@@ -357,7 +357,7 @@ paths:
                     :\"TODO\",\"priority\":\"HIGH\",\"dueDate\":\"2026-06-11\"}],\"\
                     pageInfo\":{\"currentPage\":1,\"pageSize\":10,\"totalElements\"\
                     :1,\"totalPages\":1,\"isFirst\":true,\"isLast\":true}},\"timestamp\"\
-                    :\"2026-06-04T18:52:27.3571477\"}"
+                    :\"2026-06-04T19:28:02.735466\"}"
   /api/projects/{projectId}:
     get:
       tags:
@@ -386,7 +386,7 @@ paths:
                     :\"ACTIVE\",\"startDate\":\"2026-06-04\",\"endDate\":\"2026-09-04\"\
                     ,\"role\":\"OWNER\",\"memberCount\":2,\"totalTaskCount\":10,\"\
                     completedTaskCount\":6,\"inProgressTaskCount\":4,\"delayedTaskCount\"\
-                    :2},\"timestamp\":\"2026-06-04T18:51:45.2732631\"}"
+                    :2},\"timestamp\":\"2026-06-04T19:27:19.2926726\"}"
     put:
       tags:
       - Project
@@ -420,7 +420,7 @@ paths:
               examples:
                 프로젝트 수정 성공:
                   value: "{\"status\":\"SUCCESS\",\"body\":{\"projectId\":1},\"timestamp\"\
-                    :\"2026-06-04T18:51:45.231105\"}"
+                    :\"2026-06-04T19:27:19.2426034\"}"
     delete:
       tags:
       - Project
@@ -440,10 +440,10 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/api-projects-projectId486549215"
+                $ref: "#/components/schemas/api-tags-tagId486549215"
               examples:
                 프로젝트 삭제 성공:
-                  value: "{\"status\":\"SUCCESS\",\"body\":null,\"timestamp\":\"2026-06-04T18:51:45.1878888\"\
+                  value: "{\"status\":\"SUCCESS\",\"body\":null,\"timestamp\":\"2026-06-04T19:27:19.1846056\"\
                     }"
   /api/tags/{tagId}:
     get:
@@ -469,7 +469,7 @@ paths:
               examples:
                 태그 단건 조회 성공:
                   value: "{\"status\":\"SUCCESS\",\"body\":{\"tagId\":1,\"name\":\"\
-                    백엔드\",\"color\":\"blue\"},\"timestamp\":\"2026-06-04T18:52:26.7237583\"\
+                    백엔드\",\"color\":\"blue\"},\"timestamp\":\"2026-06-04T19:28:01.8823375\"\
                     }"
     put:
       tags:
@@ -502,7 +502,7 @@ paths:
               examples:
                 태그 수정 성공:
                   value: "{\"status\":\"SUCCESS\",\"body\":{\"tagId\":1},\"timestamp\"\
-                    :\"2026-06-04T18:52:26.6422226\"}"
+                    :\"2026-06-04T19:28:01.7845062\"}"
     delete:
       tags:
       - Tag
@@ -522,10 +522,10 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/api-projects-projectId486549215"
+                $ref: "#/components/schemas/api-tags-tagId486549215"
               examples:
                 태그 삭제 성공:
-                  value: "{\"status\":\"SUCCESS\",\"body\":null,\"timestamp\":\"2026-06-04T18:52:26.5961912\"\
+                  value: "{\"status\":\"SUCCESS\",\"body\":null,\"timestamp\":\"2026-06-04T19:28:01.7294223\"\
                     }"
   /api/tasks/kanban:
     get:
@@ -555,7 +555,7 @@ paths:
                     \ JWT 기반 로그인 API 개발\",\"status\":\"TODO\",\"priority\":\"HIGH\"\
                     ,\"dueDate\":\"2026-06-11\",\"assigneeName\":\"데브로그팀원\",\"tags\"\
                     :[{\"tagId\":10,\"name\":\"Frontend\",\"color\":\"#3357FF\"}]}],\"\
-                    IN_PROGRESS\":[],\"DONE\":[],\"HOLD\":[]}},\"timestamp\":\"2026-06-04T18:52:27.3980275\"\
+                    IN_PROGRESS\":[],\"DONE\":[],\"HOLD\":[]}},\"timestamp\":\"2026-06-04T19:28:02.7902184\"\
                     }"
   /api/tasks/priority:
     get:
@@ -574,7 +574,7 @@ paths:
               examples:
                 작업 우선순위 목록 조회 성공:
                   value: "{\"status\":\"SUCCESS\",\"body\":{\"taskPriorities\":[\"\
-                    LOW\",\"MEDIUM\",\"HIGH\",\"URGENT\"]},\"timestamp\":\"2026-06-04T18:52:27.4338913\"\
+                    LOW\",\"MEDIUM\",\"HIGH\",\"URGENT\"]},\"timestamp\":\"2026-06-04T19:28:02.851704\"\
                     }"
   /api/tasks/status:
     get:
@@ -593,7 +593,7 @@ paths:
               examples:
                 작업 상태 목록 조회 성공:
                   value: "{\"status\":\"SUCCESS\",\"body\":{\"taskStatusList\":[\"\
-                    TODO\",\"IN_PROGRESS\",\"DONE\",\"HOLD\"]},\"timestamp\":\"2026-06-04T18:52:27.464746\"\
+                    TODO\",\"IN_PROGRESS\",\"DONE\",\"HOLD\"]},\"timestamp\":\"2026-06-04T19:28:02.8926291\"\
                     }"
   /api/tasks/{taskId}:
     get:
@@ -606,6 +606,12 @@ paths:
       - name: taskId
         in: path
         description: 조회할 작업 고유 식별 ID
+        required: true
+        schema:
+          type: string
+      - name: projectId
+        in: query
+        description: 조회할 프로젝트 고유 식별 ID
         required: true
         schema:
           type: string
@@ -622,7 +628,7 @@ paths:
                     :\"인증 기능 구현\",\"description\":\"스프링 시큐리티 + JWT 기반 로그인 API 개발\"\
                     ,\"status\":\"TODO\",\"priority\":\"HIGH\",\"dueDate\":\"2026-06-11\"\
                     ,\"assigneeName\":\"test\",\"tags\":[{\"tagId\":10,\"name\":\"\
-                    Backend\",\"color\":\"#FF5733\"}]},\"timestamp\":\"2026-06-04T18:52:27.3172911\"\
+                    Backend\",\"color\":\"#FF5733\"}]},\"timestamp\":\"2026-06-04T19:28:02.6819268\"\
                     }"
   /api/projects/{projectId}/invite:
     post:
@@ -659,7 +665,7 @@ paths:
                   value: "{\"status\":\"SUCCESS\",\"body\":{\"successEmails\":[\"\
                     success@test.com\"],\"failedEmails\":[\"notfound@test.com (존재하\
                     지 않는 회원)\",\"already@test.com (이미 참여 중인 팀원)\"]},\"timestamp\"\
-                    :\"2026-06-04T18:51:45.1528944\"}"
+                    :\"2026-06-04T19:27:19.1356843\"}"
   /api/projects/{projectId}/members:
     get:
       tags:
@@ -684,7 +690,7 @@ paths:
               examples:
                 프로젝트 팀원 목록 조회 성공:
                   value: "{\"status\":\"SUCCESS\",\"body\":{\"members\":[{\"userId\"\
-                    :1,\"name\":\"test\"}]},\"timestamp\":\"2026-06-04T18:51:44.9978265\"\
+                    :1,\"name\":\"test\"}]},\"timestamp\":\"2026-06-04T19:27:18.9591921\"\
                     }"
 components:
   schemas:
@@ -820,27 +826,6 @@ components:
         status:
           type: string
           description: 응답 상태 코드/메시지
-    TagResponse:
-      title: TagResponse
-      required:
-      - status
-      - timestamp
-      type: object
-      properties:
-        body:
-          required:
-          - tagId
-          type: object
-          properties:
-            tagId:
-              type: number
-              description: 태그 ID
-        timestamp:
-          type: string
-          description: 응답 시간
-        status:
-          type: string
-          description: 응답 상태
     TaskStatusListResponse:
       title: TaskStatusListResponse
       required:
@@ -868,6 +853,27 @@ components:
         status:
           type: string
           description: 응답 상태 코드/메시지
+    TagResponse:
+      title: TagResponse
+      required:
+      - status
+      - timestamp
+      type: object
+      properties:
+        body:
+          required:
+          - tagId
+          type: object
+          properties:
+            tagId:
+              type: number
+              description: 태그 ID
+        timestamp:
+          type: string
+          description: 응답 시간
+        status:
+          type: string
+          description: 응답 상태
     KanbanBoardResponse:
       title: KanbanBoardResponse
       required:
@@ -1214,8 +1220,6 @@ components:
         status:
           type: string
           description: 응답 상태
-    api-projects-projectId486549215:
-      type: object
     InviteMembersResponse:
       title: InviteMembersResponse
       required:
@@ -1253,6 +1257,8 @@ components:
         status:
           type: string
           description: 응답 상태
+    api-tags-tagId486549215:
+      type: object
     CreateProjectRequest:
       title: CreateProjectRequest
       required:
